# slop-code-bench

./: CLAUDE.md  pyproject.toml
configs/: providers.yaml  slop_rules.yaml
configs/models/: opus-4.5.yaml  opus-4.6.yaml  sonnet-4.5.yaml  sonnet-4.6.yaml
configs/prompts/: anti_slop.jinja  plan_first.jinja
configs/repos/: example.json  repos.json
docs/: metrics-reference.md
docs/commands/: metrics.md
docs/metrics/: README.md  checkpoint-results.md  configuration.md  interpreting-results.md  output-files.md  run-results.md
problems/eve_industry/solutions/checkpoint_5/: plan_service.py
problems/eve_industry/solutions/checkpoint_6/: plan_service.py
problems/eve_industry/tests/cases/checkpoint_4/bane_invent/: jobs.csv  materials.csv  produce.txt
problems/eve_jump_planner/solutions/checkpoint_2/: did_he_say_jump.py
problems/file_backup/solution/: backup_scheduler.py
problems/file_backup/solution/scheduler/: __init__.py  errors.py  executor.py  models.py  parser.py
problems/file_merger/solutions/checkpoint_1/merger/: types.py
problems/file_merger/tests/data/checkpoint_1/hidden/: empty_file_inference_strict.yaml  float_scientific_notation.yaml
problems/file_merger/tests/data/checkpoint_1/spec_errors/: bool_nonstandard_strict.yaml
problems/file_merger/tests/data/checkpoint_2/hidden/: cross_file_type_inference.yaml
problems/file_merger/tests/data/checkpoint_3/hidden/: partition_typed_bool.yaml  partition_typed_int.yaml
problems/file_merger/tests/data/checkpoint_4/hidden/: nested_timestamp_microseconds.yaml
scripts/: analyze_repos.py
src/slop_code/agent_runner/agents/claude_code/: agent.py
src/slop_code/dashboard/: data.py  settings_callbacks.py
src/slop_code/dashboard/graphs/: bar.py  comparison.py  erosion.py  heatmap.py  scatter.py
src/slop_code/dashboard/pages/: erosion.py  run_analysis_quality.py
src/slop_code/entrypoints/: utils.py
src/slop_code/entrypoints/commands/: backfill_reports.py  consolidate_runs.py  variance.py
src/slop_code/metrics/: __init__.py  driver.py  models.py  quality_io.py
src/slop_code/metrics/checkpoint/: __init__.py  composites.py  delta.py  driver.py  extractors.py  mass.py
src/slop_code/metrics/languages/python/: __init__.py  ast_grep.py  lint_metrics.py  redundancy.py  symbols.py  type_check.py  waste.py
src/slop_code/metrics/summary/: aggregators.py  compute.py
tests/: test_abstraction_roi.py
tests/agent_runner/agents/: claude_code_agent_test.py
tests/dashboard/: data_test.py
tests/dashboard/graphs/: heatmap_test.py  scatter_test.py
tests/entrypoints/: test_utils_summary.py
tests/entrypoints/commands/: test_backfill_reports.py  test_consolidate_runs.py  test_variance.py
tests/metrics/: checkpoint_results_test.py  driver_test.py  models_test.py  summary_test.py  test_mass_delta.py
tests/metrics/checkpoint/: composites_test.py
tests/metrics/language/: py_ast_grep_test.py  py_lint_metrics_test.py  py_redundancy_test.py  py_symbols_test.py  py_type_check_test.py  py_waste_test.py
tests/scratch/: test_flagged_dup_loc.py
tests/scripts/: test_analyze_repos.py  test_pass_rate_scatter.py
